2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix for --reserve-regs-iy from optralloc branch.

2011-02-17 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: use ${IsNT} from WinVer.nsh

2011-02-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improvements from optralloc branch.

2011-02-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/src.dsp: added some header files, added Resource Files group
	* src/version.awk: added SDCC_BUILD_NR
	* support/scripts/resource.rc: added VERSIONINFO

2011-02-07 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/glue.c: applied patch #2924048:
	  __code initialized structures cause asm syntax error +patch.
	  Thanks Philip Gladstone

2011-02-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/avr/gen.c (aopOp): use OP_VALUE
	* src/xa51/ralloc.c (packRegsForSupport): use OP_SYMBOL, OP_KEY, OP_DEFS
	* src/SDCCloop.c (basicInduction): fixed bug 3150679
	* support/regression/tests/bug3166208.c: added test for bug 3150679

2011-02-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (setOperandType): fixed bug 3166208
	* support/regression/tests/bug-221168.c: use __xdata from testfwk.h
	* support/regression/tests/bug3166208.c: new, added

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCutil.c,
	  src/SDCClrange.c,
	  src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/mcs51/gen.c,
	  src/z80/ralloc.c,
	  src/pic14/gen.c,
	  src/pic14/ralloc.c,
	  src/pic16/gen.c,
	  src/pic16/genutils.c,
	  src/hc08/gen.c,
	  src/ds390/gen.c,
	  src/ds390/ralloc.c:
	  Minor improvements from the optralloc branch.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed #3166058.
	* src/z80/gen.c:
	  Improvements from the optralloc branch.
